src/assets/scss/global.scss
/* ... */
.ant-form-item-required {
  .required {
    color: red !important;
    margin-left: 3px;
    display: inline-block;
  }
}

.dropdown {
  position: absolute;
  right: 15px;
  bottom: 20px;
  width: 20px;
  cursor: pointer;
  height: 20px;
}

.ant-dropdown-trigger .anticon.anticon-more {
  color: #fff;
  font-size: 20px;
  right: inherit;
  position: inherit;
  bottom: inherit;
}

.Profile_btn {
  min-width: 150px;
}

.tab--card>.ant-card-head {
  .ant-card-head-wrapper {
    flex: inherit !important;
  }

  .ant-tabs {
    flex: 1;
    overflow: hidden;

    .ant-tabs-nav-list {
      margin-left: auto;
    }
  }
}

.TableContent .ant-table-content {
  overflow: auto;
}

.statementPreviewModal {
  .ant-modal-body {
    max-height: calc(100vh - 150px);
    overflow-x: hidden;

    pre {
      white-space: inherit;
    }
  }

  .ant-descriptions-item-label {
    font-weight: bold;
    min-width: 108px;
    max-width: 165px;
  }
}

.searchinput {
  position: relative;
  pointer-events: none;
  z-index: 999;
}

.ql-html-editor {

  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p {
    span {
      position: relative;

      &::before {
        content: " ";
      }
    }
  }
}

.ant-drawer-content-wrapper {
  max-width: 100%;
}

.Parent_Leaf .ant-tree-switcher {
  display: none !important;
}

.topicDetailsCollapse {
  &.news-feeds {
    .ant-collapse-header {
      display: block;
    }

    .ant-collapse-extra {
      margin-top: 0.5rem;
    }
  }
}

.policy-content .p1,
.policy-content .p2,
.policy-content .p3,
.policy-content h1,
.policy-content h2,
.policy-content h3,
.policy-content h4,
.policy-content h5,
.policy-content h6 {
  font-weight: bold;
}

.policy-content .p1,
.policy-content h1 {
  font-size: 2rem;
}

.policy-content .p2,
.policy-content h2 {
  font-size: 1.75rem;
}

.policy-content .p3,
.policy-content h3 {
  font-size: 1.5rem;
}

.policy-content .p4,
.policy-content h4 {
  font-size: 1.25rem;
}

.policy-content .p5,
.policy-content h5 {
  font-size: 1.125rem;
}

.profileInfoPointer #selectCountry,
#email,
#selectCity,
#selectState {
  pointer-events: none;
}

.disable-style {
  color: rgba(0, 0, 0, 0.25) !important;
  border-color: #d9d9d9;
  background: #f5f5f5 !important;
}

.video-chap-content {
  padding: 10px 0;

  ul,
  ol {
    margin-left: 30px !important;
    padding-left: 0 !important;
    font-size: 1rem !important;
    font-weight: 400 !important;
    line-height: 1.8 !important;

    li {
      line-height: 1.3 !important;

      &::marker {
        font-size: 1rem;
      }
    }
  }

  p,
  a {
    font-size: 1rem !important;
    font-weight: 400 !important;
    line-height: 1.8 !important;
  }
}

.activeListWrap {
  ul {
    padding-left: 26px;
  }
}

@media screen and (max-width: 767px) {
  .adsbygoogle {
    display: none !important;
  }
}

.socail-skeleton {
  display: flex;
  gap: 15px;

  span {
    width: 30px;
    height: 30px;
  }
}

.campInfoRight {
  display: flex;
}

.cam-social-ot {
  .camp-social {
    padding: 0 !important;
  }

  .manage-form-btnwrap {
    display: flex;
    gap: 15px;

    &>span {
      width: 100px;
    }
  }
}

.rang-slider {
  @media screen and (min-width:768px) {
  margin:10px 40px 10px;
}
@media screen and (max-width:767px) {
  margin:10px 16px 10px;
}
.ant-slider-tooltip {
  .ant-tooltip-arrow-content  {
    --antd-arrow-background-color: #4484ce;
  }
  .ant-tooltip-inner{
  background-color: #4484ce;
  }
}
  .ant-slider-mark {
    top: -22px;

    &-text {
      color: var(--primary);
      font-size: 10px;

      &:last-child {
        white-space: nowrap;
      }
    }
  }

  .ant-slider-handle {
    border-color: var(--primary);
    background-color: var(--primary);
  }

  .ant-slider-rail,
  .ant-slider-track {
    height: 2px;
  }

  .ant-slider-handle {
    margin-top: -6px;
  }

  .ant-slider-rail {
    background-color: #bbdbff;
  }

  .ant-slider-track {
    background-color: var(--primary);
  }

  .ant-slider-dot {
    width: 1px;
    border-width: 1px;
    height: 4px;
    border-color: #bbdbff;

    &-active {
      border-color: var(--primary);
    }

    top: -4px;

    &:last-child {
      left: auto !important;
      right: 0;
    }

    .progress-bar {
      margin-left: 10px;

      span {
        font-size: 11px !important;
        font-weight: 400 !important;
      }
    }
  }
}

.evntLineActivity {
  .ant-card-body {
    padding-left: 40px !important;
  }
}

.evenline-bars {
  overflow: auto;

  &>div {
    width: 1160px;
    white-space: nowrap;
  }
}

.evntLineActivity {
  max-height: 400px;
  overflow-x: hidden;
}
/* ... */

